# doc4microservices

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT_REPORT.md  FIXES_SUMMARY.md  LICENSE  PUBLISHING_CHECKLIST.md  README.md  SECURITY.md  TEMPLATES_STATUS.md  TEMPLATES_UNIVERSALITY_ANALYSIS.md  UNIVERSAL_TEMPLATES_LIST.md  missing_docs_report.txt  pyproject.toml  ИНТЕГРАЦИЯ_MATURITY_LEVELS_ФИНАЛЬНЫЙ_ОТЧЕТ.md  МАТURITY_LEVELS_ОТЧЕТ.md  ОБНОВЛЕНИЕ_NAVIGATION_MATRIX_WORKFLOW_ОТЧЕТ.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ai-navigation-validation.yml  ci.yml  docs-command-validation.yml  docs-quality.yml  docs-validation.yml  release.yml
ai_agents/: AI_AGENT_FRAMEWORK_README.md
ai_agents/business_validation/: constraint_validator.yml  domain_classifier.yml  feasibility_checker.yml
ai_agents/deployment/: deployment_automation.yml  docker_compose_generator.yml  dockerfile_templates.yml
ai_agents/generators/: code_generation_framework.yml
ai_agents/mapping/: data_flow_patterns.yml  integration_patterns.yml  service_allocation.yml
ai_agents/validation/: architecture_compliance.yml  code_quality_validator.yml  integration_test_framework.yml
archive/: README.md
archive/working-reports/: RENAME.md  TEMPLATES_STATUS.md  TEMPLATES_UNIVERSALITY_ANALYSIS.md  UNIVERSAL_TEMPLATES_LIST.md
audit_reports/: audit_20251011_153806.md  audit_20251011_153812.md  audit_20251011_153817.md  audit_20251011_153843.md  audit_20251011_154018.md  audit_20251011_161608.md  audit_20251011_161615.md  audit_20251011_224840.md  audit_20251011_232700.md  completion_summary_20251013.md  remaining_problems_20251013_094557.md
docs/: INDEX.md  LINKS_REFERENCE.md  STYLE_GUIDE.md
docs/analysis/: AI_INTERACTION_MECHANISM_DEEP_ANALYSIS.md  DUPLICATION_AVOIDANCE_STRATEGY.md  FINAL_FIX_REPORT.md  FIXES_APPLIED_SUMMARY.md  NAMING_CONVENTIONS_ISSUES_AND_FIXES.md
docs/architecture/: data-access-rules.mdc  ms_best_practices_rules.mdc  naming_conventions.mdc
docs/atomic/: CHANGELOG.md  README.md  TEMPLATE.md
docs/audit/: AUDIT_REPORT_2025-10-11.md
docs/checklists/: SERVICE_NAMING_CHECKLIST.md  service-naming-checklist.md
docs/development/: FRAMEWORK_IMPROVEMENT_ROADMAP.md
docs/examples/: ai_agents_usage.md  aiogram-service.md  aiogram_service.md  authentication.md  communication-patterns.md  communication_patterns.md  comprehensive_testing.md  database-migrations.md  fastapi-service.md  fastapi_service.md  index.md  infrastructure_setup.md  mongodb_data_service.md  observability.md  performance_monitoring.md  postgres_data_service.md  repository-pattern.md  resilience-patterns.md  resilience_patterns.md  testing_strategies.md  use_case_integration.md  worker-service.md  worker_service.md
docs/guides/: AGENT_WORKFLOW.md  AI_CODE_GENERATION_MASTER_WORKFLOW.md  AI_GENERATION_PIPELINE_STEP_BY_STEP_RU.md  ARCHITECTURE_GUIDE.md  DEVELOPMENT_COMMANDS.md  IMPLEMENTATION_PLAN_TEMPLATE.md  INTERACTIVE_AI_WORKFLOW.md  MIGRATION_4PART_TO_3PART.md  PROMPT_VALIDATION_GUIDE.md  REQUIREMENTS_INTAKE_TEMPLATE.md  SEMANTIC_SHORTENING_GUIDE.md  TEMPLATE_NAMING_GUIDE.md  USE_CASE_IMPLEMENTATION_GUIDE.md  ai-code-generation-master-workflow.md  architecture-guide.md  development-commands.md  implementation-plan-template.md  prompt-validation-guide.md  requirements-intake-template.md  requirements-traceability-guide.md  semantic-shortening-guide.md  shared-components.md  (+3 more)
examples/: ai_generated_project_structure.md  aiogram_service.md  authentication.md  communication_patterns.md  deployment_patterns.md  fastapi_service.md  index.md  mongodb_data_service.md  observability.md  postgres_data_service.md  resilience_patterns.md  shared_http_client.md  worker_service.md
prompts/: README.md  documentation_audit.md  documentation_audit.md.backup  documentation_audit_v1.md  documentation_audit_v2.md
scripts/: README.md  audit_docs.sh  check_links.sh  quick_audit.sh  validate_atomic_docs.py  validate_docs.py  validate_docs.sh  validate_docs.sh.deprecated  validate_naming.py
templates/: README.md
use_cases/: README.md
(+255 files in other folders)
